Fixes: flicker on repaint - rendering menu labels
Don't know if it's just coincidence but setting translateZ on the
scroll-target class fixes all that flickering that eventually appears

The theme didn't account the new rendering menu within the drawer

--- a/Custom.css
+++ b/Custom.css
@@ -3,6 +3,9 @@
 /* Optimized for Chrome Canary Channel v32
 /* https://github.com/mauricecruz/chrome-devtools-zerodarkmatrix-theme
 /*************************************************************************/
+.scroll-target {
+  -webkit-transform: translateZ(0);
+}
 .styles-section .properties .disabled,
 .styles-section .properties .not-parsed-ok {
   -webkit-transition: opacity 0.5s ease-in-out 0;
@@ -1862,6 +1865,7 @@ select.status-bar-item:hover {
 #bottom-status-bar-container .type,
 #bottom-status-bar-container .timeline-records-stats,
 .drawer-header span,
+.drawer .settings-tab.help-container label,
 .status-bar-item .search-drawer-header,
 .status-bar-item .search-config-label,
 .source-frame-cursor-position,
